# nldas-icechunk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: LNDAS_virtualization_example.ipynb  NLDAS_virtualization_user_example-Copy1.ipynb  all-zero.ipynb  benchmark.ipynb  bugfixes.ipynb
scripts/: icechunk-conversion.py
scripts/.ipynb_checkpoints/: icechunk-conversion-checkpoint.py
