[project]
name = "nldas-icechunk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.7.0",
    "fsspec>=2025.7.0",
    "h5netcdf>=1.6.4",
    "icechunk>1.0.0",
    "lithops>=3.6.1",
    "matplotlib>=3.10.5",
    "s3fs>=2025.7.0",
    "virtualizarr>2.0.0",
    "xarray>=2025.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.2.0",
]
